<resources>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="app_name">Local Library</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="manage">Manage</string>
    <string name="read">Read</string>
    <string name="user">User</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="add">ADD</string>
    <string name="addbook">ADD BOOK</string>
    <string name="addimage">Add Image</string>
    <string name="category_name">Category Name</string>
    <string name="description">Description</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="url">Url</string>
</resources>
