<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:background="?attr/colorPrimaryDark"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="4dp" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/smallscreengutter"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/smallscreengutter">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/mintextinputheight"
                android:layout_marginBottom="4dp"
                android:background="@drawable/textinputbackground"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textSize="@dimen/normaltextsize"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/mintextinputheight"
                android:layout_marginBottom="4dp"
                android:background="@drawable/textinputbackground"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="@dimen/normaltextsize"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/mintextinputheight"
                android:layout_marginBottom="4dp"
                android:background="@drawable/textinputbackground"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="@dimen/normaltextsize"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/mintextinputheight"
                android:layout_marginBottom="4dp"
                android:background="@drawable/textinputbackground"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/normaltextsize"/>

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:minHeight="40dp"/>
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>