<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:padding="@dimen/smallscreengutter">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/smallscreengutter"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_in"
                android:visibility="gone"/>


            <ImageView
                android:id="@+id/imgbook"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/card_element_margin"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@mipmap/noimage"
                android:contentDescription="@string/addimage"/>
            <TextView
                android:id="@+id/tvaddimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_element_margin"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="@dimen/card_action_textsize"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/addimage"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tititle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_element_margin"
                android:layout_below="@id/imgbook"
                android:background="@drawable/textinputbackground"
                android:hint="@string/title"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textStyle="bold"
                android:textSize="@dimen/card_title1"
                android:textColor="#000000"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiauthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_element_margin"
                android:layout_below="@id/tititle"
                android:background="@drawable/textinputbackground"
                android:hint="@string/author"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textColor="#000000"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_element_margin"
                android:layout_below="@id/tiauthor"
                android:background="@drawable/textinputbackground"
                android:hint="@string/url"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textColor="#000000"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tidescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_element_margin"
                android:background="@drawable/textinputbackground"
                android:layout_below="@id/tiurl"
                android:textCursorDrawable="@null"
                android:hint="@string/description"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tvadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_element_margin"
                android:layout_below="@id/tidescription"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="@dimen/card_action_textsize"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/addbook"/>

            <TextView
                android:id="@+id/img64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvadd"
                android:background="@android:color/black"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>