<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:padding="@dimen/smallscreengutter">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/smallscreengutter"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tititle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_element_margin"
        android:background="@drawable/textinputbackground2"
        android:hint="@string/category_name"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        android:textSize="@dimen/card_title1"
        android:textColor="#000000"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tidescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_element_margin"
        android:background="@drawable/textinputbackground2"
        android:layout_below="@id/tititle"
        android:textCursorDrawable="@null"
        android:hint="@string/description"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tvadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_element_margin"
        android:layout_below="@id/tidescription"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="@dimen/card_action_textsize"
        android:textColor="@color/colorPrimary"
        android:text="@string/add"/>


</RelativeLayout>